--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -16,6 +16,8 @@ install (PROGRAMS mount-info DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 install (PROGRAMS mount-kde DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 install (PROGRAMS mount-openicc DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 
+install (PROGRAMS meta DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+
 install (PROGRAMS upgrade-bootstrap DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 
 install (PROGRAMS umount-all DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
