--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ pkg_check_modules(GIO gio-2.0>=2.48 REQUIRED)
 pkg_check_modules(GELEKTRA gelektra-4.0>=0.8.16 REQUIRED)
 include_directories(${GELEKTRA_INCLUDE_DIRS})
 add_library(elektrasettings SHARED elektrasettingsbackend.c)
+set(MODULE_PRIORITY 200 CACHE STRING "GIO Module Priority. Lower then 100 means dconf backend will be default.")
+target_compile_definitions(elektrasettings PRIVATE G_ELEKTRA_SETTINGS_MODULE_PRIORITY=${MODULE_PRIORITY})
 target_link_libraries(elektrasettings ${GLIB_LIBRARIES} ${GMODULE_LIBRARIES} ${GIO_LIBRARIES} ${GELEKTRA_LIBRARIES})
 install(TARGETS elektrasettings LIBRARY DESTINATION "/usr/lib/gio/modules/")
 
